# plantrs

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci_checks.yml  gh_paged_deploy.yml
docs/: PH Meter.md  README.md  _Dashboard.md  index.md
docs/.obsidian/: core-plugins-migration.json  graph.json  workspace.json
docs/Chemicals/: Nutrients.md  PH Down.md
docs/General/: Setup.md  System concept.md
docs/Hardware/: Calibration Hardware.md  DHT11.md  MQ135.md  PCB.md  Picoprobe.md  Raspberry Pi Pico.md  Sensors.md
docs/Hardware/Actuators/: Actuators.md  Carbon Filter Fan.md  Circulation Fan.md  Grow Lights.md  Humidifier.md  Peristaltic Pump.md  Superoxigenation Pump.md  TMC 2209.md  TMC429 Motion Controller.md  Water Pump.md
docs/Hardware/Peripherals/: Display for Calibration.md  EEPROM.md  Oled display.md
docs/Hardware/Sensors/: DHT11.md  EC Meter.md  MH-Z19C.md  MQ135.md  PH Meter.md  Sensors.md  TDS Meter.md  Water Level Sensor.md
docs/Mocs/: Actuators Moc.md  Calibration Moc.md  Peripherals Moc.md  Runtime Moc.md  Sensors Moc.md  Setup Moc.md
docs/Plant Research/: Feeding Schedule.md  Growing Phase.md  Light Schedule.md  Plant Research.md
docs/Software/: Calibration Software.md  Power Failure Recovery.md  Recipe.md  user input.md
scripts/: flash.sh  run-wokwi.sh
src/: analog_ph_meter.rs  dht.rs  main.rs  mq135.rs  pin_switch.rs  pump.rs  soil_moisture.rs  tmc429.rs  water_pump.rs  wifi.rs
