[package]
name = "plantrs"
version = "0.1.0"
authors = ["elheck"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.7", features = ["binstart"] }
esp-idf-svc = "0.42.1"
embedded-svc = "0.22.0"


[build-dependencies]
embuild = "0.30.2"
anyhow = "1"
