[package]
name = "plantrs"
version = "0.1.0"
authors = ["elheck"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1"
log = "0.4.17"
esp-idf-sys = { version = "0.31.8", features = ["binstart"] }
esp-idf-svc = "0.42.3"
embedded-svc = "0.22.1"
esp-idf-hal = "0.38.1"
embedded-hal = "0.2.7"

[build-dependencies]
embuild = "0.30.2"
anyhow = "1"
